ocaml (3.09.3-2) UNRELEASED; urgency=low

  [ Samuel Mimram ]
  * Ship dh_ocaml into ocaml-nox

 -- Stefano Zacchiroli <zack@debian.org>  Tue, 26 Sep 2006 15:05:02 +0200

ocaml (3.09.3-1) experimental; urgency=low

  [ Samuel Mimram ]
  * New upstream release.

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Sat, 30 Sep 2006 01:15:16 +0200

ocaml (3.09.3~rc1-1) experimental; urgency=low

  [ Julien Cristau ]
  * New upstream release candidate.

 -- Samuel Mimram <smimram@debian.org>  Sun, 10 Sep 2006 23:11:31 +0000

ocaml (3.09.2-7) unstable; urgency=low

  [ Julien Cristau ]
  * Fix typo in ocaml-base description (Closes: #390224).

  [ Stefano Zacchiroli ]
  * debian/control
    - added XS-Vcs-Svn field to let users know where our svn repository is
  * Added .txt suffix to the textual version of the policy
  * Ship CDBS class for building OCaml related packages in
    /usr/share/cdbs/1/; permission granted by the CDBS maintainers to
    ship files there, see #387299. (Closes: #387299).
  * Updated policy (now at version 0.7.1); changes:
    - added a best-practice section about using the XS-Vcs-Svn field in
      debian/control of OCaml related packages
    - fixed typo in the suggested debian/rules line to fill the OFILES
      variable

  [ Samuel Mimram ]
  * Updated policy (section 2.3) to explain how to add a conditional
    dependency on ocaml-base-nox-VERSION for native/bytecode packages.

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 28 Oct 2006 15:42:08 +0200

ocaml (3.09.2-6) unstable; urgency=low

  * Correct /usr/include/caml symbolic link, closes: #379271.
  * Correct symbolic links in documentation directories.
  * Updated policy.

 -- Samuel Mimram <smimram@debian.org>  Sun, 23 Jul 2006 14:37:36 +0000

ocaml (3.09.2-5) unstable; urgency=low

  * Added a missing dependency on docbook-xml, closes: #373996.

 -- Samuel Mimram <smimram@debian.org>  Fri, 16 Jun 2006 17:58:35 +0000

ocaml (3.09.2-4) unstable; urgency=low

  [ Julien Cristau ]